{
    "name": "ControllerInput",
    "maps": [
        {
            "name": "GameActions",
            "id": "a3659a87-8dc0-473c-a1d6-6d34cb3f3bee",
            "actions": [
                {
                    "name": "MoveJumpVectorNegative",
                    "type": "Value",
                    "id": "8911b922-f9a7-4a61-9ff1-caa71ca6c405",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveJumpVectorPositive",
                    "type": "Value",
                    "id": "3d3b2a0b-cada-44e0-b651-16294c520fec",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Input",
                    "type": "PassThrough",
                    "id": "d4dc813f-bb80-4f74-9823-0510360b9e28",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "52e20a42-39dc-4ede-9e88-71ae82fe5574",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "2982d4db-f695-4861-ab8b-599ce140f39b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a4f7c093-7e34-4294-b3d5-aa4eb012c4d4",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVectorNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9a47c36-ae37-4e18-8925-bf6eb017b4fe",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVectorNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5826f3fa-44ca-4cd0-a965-0375e282df68",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVectorPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07a140bf-c83d-4125-93f8-39f7c670bde9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVectorPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f3ac4f4-3331-4946-8c8a-958ce3d76f3d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0803d79d-4c87-40eb-a120-cba9f2be45db",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff554a40-a31b-4dc6-a6dd-c6de65dde30b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Input",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9c184d0-b902-480d-b745-c9ac9c86f82e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameActions1",
            "id": "e4cdc12d-588f-4675-88e3-5b8e4ffda98b",
            "actions": [
                {
                    "name": "Input",
                    "type": "PassThrough",
                    "id": "5e1410e0-3832-4e10-a6be-2af81068b29c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "dd683697-bac3-4257-a73b-999aa49e25ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "10c950e7-95c5-49f3-a83b-234f3d7ac36c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f6d5ef4-f7e4-46bb-9e06-5b5e03b22778",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Input",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameActions2",
            "id": "edafdcc0-465a-4a68-964c-26be54801151",
            "actions": [
                {
                    "name": "MoveJumpVector",
                    "type": "PassThrough",
                    "id": "b8c3d51c-c36d-4b38-a06d-0db6cd6e58a6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePlayerRight",
                    "type": "Value",
                    "id": "e45bafdb-dd24-4163-bad9-0d173e1de98a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePlayerLeft",
                    "type": "Value",
                    "id": "3c67a27f-23d6-480b-b8db-775596f33303",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "94861725-dc32-4b91-b73a-0d73a9efa200",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2f7f2215-fd73-46ee-aa66-847fe6929879",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c375cc6-7caa-4bad-97c9-b78bd4a4f019",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVector",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "feaacebd-398f-4fed-8f14-617292608d4b",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5923afbc-9de3-4290-9789-d5856c65d9c9",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameActions3",
            "id": "03e75188-db45-4ecc-a5b0-673b14553505",
            "actions": [
                {
                    "name": "MoveJumpVector",
                    "type": "PassThrough",
                    "id": "6301b471-ae62-445c-9b02-8aca7bdf7892",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePlayerRight",
                    "type": "Value",
                    "id": "2db339ac-3beb-4eac-996e-3d49e36770b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePlayerLeft",
                    "type": "Value",
                    "id": "0f23f28a-9242-4947-af20-d3ce014fe997",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "af214a37-204e-4124-8cae-636a4069e0f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "74055b7c-69bc-4b42-aa2e-2b2726d6a027",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce5026ea-7f89-4cf7-a50e-acbc2f02f9a9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVector",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "921ad03a-e09a-4d8c-b2bc-a1ca529cf48f",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2e06485-b1b1-4ac4-a134-8a565724a19a",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameActions4",
            "id": "aa8b232c-dcb1-4d6f-942a-0ea43688c534",
            "actions": [
                {
                    "name": "MoveJumpVectorPositive",
                    "type": "Button",
                    "id": "330af6e9-9f3b-4419-8d20-e1824db7cb56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveJumpVectorNegative",
                    "type": "Button",
                    "id": "d8cd9c3c-62c7-4566-bc90-ce16b7a4813c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePlayer",
                    "type": "Button",
                    "id": "044f1da1-079a-454e-9029-3120ab26943b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9db58e87-26e5-434b-9d31-640074484b03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "809ad2c2-4e6a-455a-a51b-985e82a1b777",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "674765cb-9321-4b70-b386-1c03f196fd84",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3e95293-291e-4de1-9365-6790eded9e16",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVectorNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "965331a8-b7be-428d-b0a4-cd9c84d74330",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVectorPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameActions5",
            "id": "d8dc6660-aea0-44ee-9cc8-0a675ee5d982",
            "actions": [
                {
                    "name": "MoveJumpVectorPositive",
                    "type": "Button",
                    "id": "0232bb35-bc35-4758-b9af-e7403e5f3ba1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveJumpVectorNegative",
                    "type": "Button",
                    "id": "a9ab6da2-7b6c-4a3a-91e9-0a8fcab4db50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePlayer",
                    "type": "Button",
                    "id": "6213dab1-a131-40c7-8a6c-1fb635b98ece",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "df27b514-6e15-43c9-9b74-77f83a478c64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a32c90c-2003-4658-a713-51ef74d994fa",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89191cff-b609-420d-84f1-27fe8a15dadc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abeec635-501d-4803-accc-244df61c80bb",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVectorNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f02f8b78-8b1d-4da2-bc71-0475fbc9b960",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveJumpVectorPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameActions6",
            "id": "b673466d-9b3e-44f8-9266-5ab59eb8d2e8",
            "actions": [
                {
                    "name": "Input",
                    "type": "PassThrough",
                    "id": "2e5f0e39-85e5-49fb-b52a-1122a4f671a6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b80d2734-045b-4ec9-b05b-40f2e48e0b6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionChange",
                    "type": "PassThrough",
                    "id": "8541abca-e46d-4909-9700-00bbeff8ea05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21cecdf8-81e3-4246-a05a-c88810c9bd85",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31fe06d2-c57f-47bd-9bdf-f9bd69a52917",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d6bc2df-0c93-4bc8-9bf9-78cd123dbd81",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Input",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6193b1d-de7f-43c7-aab8-185a80262368",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}